--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+  <script src="https://cdn.tiny.cloud/1/ox0brzoc2w3cwf33dyv0bz2b3c0pcyd5f6506amtq7tmr23z/tinymce/6/tinymce.min.js" referrerpolicy="origin"></script>
 </head>
 <body class="mat-typography">
   <app-root></app-root>
